# utube-transcript

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-test.sh  gitignore  pyproject.toml  requirements.txt  transcript.txt
.github/: copilot-instructions.md
output/: .gitkeep
src/utube_transcript/: __init__.py  cli.py  downloader.py  interactive.py  ollama_client.py  transcriber.py  utils.py
src/utube_transcript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py  test_ollama.py
